jenkins/ingress/service-app.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: p9-react-app
spec:
  type: ClusterIP
  selector:
    app: p9-react-app
  ports:
   - port: 80
     targetPort: 80
...
