jenkins/ingress/ingress-nginx-app.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pf9app-routing
spec:
  rules:
    - host: pf9app.platform9.horse
      http:
        paths:
        - path: /
          backend:
            serviceName: p9-react-app
            servicePort: 80
...
